--- a/Java相关学习/JavaSE基础/3-数组.md
+++ b/Java相关学习/JavaSE基础/3-数组.md
@@ -103,6 +103,8 @@ public class ArrayExercise04 {
 
 ## 二分查找法
 
+1
+
 ```java
 import java.lang.reflect.Array;
 import java.util.Arrays;
@@ -143,3 +145,67 @@ public class sss2 {
     }
 }
 ```
+
+2
+
+```
+public static void main(String[] args) {
+    //二分查找法
+    int[] score = {1, 5, 12, 23, 25, 43, 56, 78, 84, 90};
+    int start = 0;
+    int end = score.length - 1;
+    boolean flag=true;
+    Scanner scanner = new Scanner(System.in);
+    System.out.print("请输入你要查找的数：");
+    int num = scanner.nextInt();
+
+    while (start<=end) {
+       int middle=(start+end)/2;
+       if(num>score[middle]){
+           start=middle+1;
+       }else if(num<score[middle]){
+           end=middle-1;
+       }else{
+           System.out.println("您要找的数是"+score[middle]+"下标为"+middle+"的地方");
+           flag=false;
+           break;
+       }
+    }
+    if(flag){
+        System.out.println("未找到你要找的数。");
+    }
+
+}
+```
+
+### 数组的练习
+
+数组中存储10个数，输入一个数组中存在的数，删除数组中该数，将该数后面的数依次前移。
+
+```java
+int[] a = {2,13,21,5,43,15,6,28,83,12};
+		for (int i : a) {
+			System.out.print(i+"\t");
+		}
+		System.out.println();
+		Scanner s = new Scanner(System.in);
+		System.out.println("请输入一个数组中存在的数：");
+		int num = s.nextInt();
+		
+		for (int i = 0; i < a.length; i++) {
+			if(a[i]==num){
+				for(;i<a.length-1;i++){
+					a[i]=a[i+1];
+				}
+				break;
+			}
+		}
+		System.out.println("删除后数组是：");
+		for (int i = 0; i < a.length-1; i++) {
+			System.out.print(a[i]+"\t");
+		}
+
+```
+
+
+
