--- a/Java相关学习/JavaSE基础/4-面向对象编程.md
+++ b/Java相关学习/JavaSE基础/4-面向对象编程.md
@@ -15,15 +15,17 @@
 ​		对象是通过类创建出来的具体的实体
 
 ### 2. 内存结构分析
-栈：一般存放基本数据类型（局部变量）
+栈（stack）：一般存放基本数据类型（局部变量；生命周期只限于方法被放在栈中的这段期间；即方法调用至执行完毕为止）
 
-堆：存放对象
+堆（heap）：存放对象，对象本身只会存于堆上。堆又称为可被垃圾回收的堆
+
+​	Java在新建一个对象时，在堆空间会创建一个足以存放该对象所有实例变量的空间。即实例变量存放在于对象所属的堆空间上。
 
 方法区：常量池（常量，比如字符串），类的加载信息（类名、包名、属性的描述信息、方法的描述信息）。
 
 ## 二、类的内部成员
 
-### 1.属性（成员变量）
+### 1.属性（成员变量，实例变量）
 
 声明在类内，方法外
 
@@ -37,6 +39,10 @@
 > 	boolean  初始值为false
 > 	char 初始值为\u0000
 > 	引用数据类型（类、接口、数组）  初始值为null
+
+实力变量也可以是一个对对象的引用，即引用与对象都是在堆上的
+
+实例变量的寿命与对象相同，
 
 ### 2.方法
 
@@ -373,7 +379,7 @@ super表示父类的引用，**只能在构造器中使用。**
 ①super.属性：当子类的属性与父类的属性重名时
 ②super.方法：调用父类的方法实现
 	但不能访问父类的私有private属性和方法
-③super()或super(实参列表）：在继承时，调用父类的构造器，只能出现且只能出现再构造器的第一句
+③super()或super(实参列表）：**在继承时，调用父类的构造器，只能出现且只能出现在构造器的第一句**
 
 ### 3.static
 
@@ -553,10 +559,13 @@ class 类名 implements 接口{
 
 9. 接口的修饰符只能是public和默认的，因为接口要被实现。
 
+10. 在有继承关系的子父类中，如果父类实现了接口的方法，则子类会继承该方法。即子类会继承父类对于接口的实现。
+
 #### 7.4 接口的作用
 
 1. 解决了Java的单继承
 2. 多个不相关的类，可能具有共同的行为特征，这样的行为特征，就可以提取成一个接口
+3. 若以接口取代具体的子类或抽象的父类作为参数或返回类型，则可以传入任何有实现该接口的东西。
 
 #### 7.5接口和继承的区别
 
@@ -739,12 +748,15 @@ class 子类 extends 父类{}
 #### 2.3 继承的细节
 
 1. 子类继承了父类==所有的==属性和方法（除构造器），非私有的属性和方法可以在子类中直接访问，但是私有属性不能直接访问，要通过父类提供的公共方法去访问
-2. 子类必须调用父类的构造器，完成父类的初始化。子类构造器中默认有一个隐藏的super
-3. 当创建子类对象时，不管使用子类的哪个构造器，默认情况下总会去调用父类的无参构造器，如果父类没有提供无参构造器，则必须在子类的构造器中用**super(对应的参数)**指定父类哪个构造器完成对父类的初始化工作，否则，编译不通过。
-4. super( )和this( )都只能放在构造器第一行，因此这两个方法不能共存在一个构造器。
-5. java所有类都是Object类的子类，Object类是所有类的基类
-6. 父类构造器的调用不限于直接父类，将一直往上追溯到Object类（顶级父类）
-7. 子类最多只能继承一个父类，Java中是单继承机制
+
+> 子类继承父类之后，在官方文档的解释中，子类无法继承父类私有的属性和方法，但是可以通过get/set方法调用。至于构造器是不能被继承的，但是在实例化子类的时候会调用父类的构造方法。
+
+1. 子类必须调用父类的构造器，完成父类的初始化。子类构造器中默认有一个隐藏的super
+2. 当创建子类对象时，不管使用子类的哪个构造器，默认情况下总会去调用父类的无参构造器，如果父类没有提供无参构造器，则必须在子类的构造器中用**super(对应的参数)**指定父类哪个构造器完成对父类的初始化工作，否则，编译不通过。
+3. super( )和this( )都只能放在构造器第一行，因此这两个方法不能共存在一个构造器。
+4. java所有类都是Object类的子类，Object类是所有类的基类
+5. 父类构造器的调用不限于直接父类，将一直往上追溯到Object类（顶级父类）
+6. 子类最多只能继承一个父类，Java中是单继承机制
 
 
 
