--- a/Java相关学习/JavaSE高级/10-IO流.md
+++ b/Java相关学习/JavaSE高级/10-IO流.md
@@ -183,6 +183,7 @@ public void writeFile(){
     FileOutputStream fileOutputStream=null;
 
     try {
+        //true的意思是默认添加到原文件内容的后面。无true的话默认就是覆盖原文件的内容。
         fileOutputStream=new FileOutputStream(filePath,true);
         String str="hello,world";
         //str.getBytes()可以把 字符串 变成字节数组
@@ -369,8 +370,9 @@ public class BufferedReader_ {
         String filePath="e:\\hello.txt";
         BufferedReader bufferedReader = new BufferedReader(new FileReader(filePath));
 
+        //用String变量来承接所读取的结果
         String line;
-        while((line=bufferedReader.readLine())!=null){
+        while((line=bufferedReader.readLine())!=null){//读一行就列出一行，直到没有东西可以读为止。
             System.out.println(line);
         }
         bufferedReader.close();
@@ -393,6 +395,387 @@ public class BufferedWrite_ {
         bufferedWriter.newLine();
 
         bufferedWriter.close();
+    }
+}
+```
+
+**缓冲区**
+
+使用缓冲区比没有使用缓冲区的效率更好。通过BufferedWriter和FileWriter的链接，BufferedWriter可以暂存一堆数据，然后到满的时候在实际写入磁盘，这样就可以减少对磁盘操作的次数。
+
+如果想要缓冲区立即写入，只要调用**writer.flush()**这个方法就可以要求缓冲区马上把内容写下去。
+
+
+
+
+
+
+
+
+
+## 对象流-ObjectInputStream和ObjectOutStream
+
+### 序列化和反序列化
+
+1. 序列化就是在保存数据时，保存数据的值和数据类型
+2. 反序列化就是在恢复数据时，恢复数据的值和数据类型
+3. 需要让某个对象支持序列化机制，则必须让其类是可序列化。该类必须实现如下两个接口：
+   1. Serializable  //这是一个标记接口，没有任何方法需要实现(推荐使用)
+      + 如果某类是可序列化的，则它的子类也自动地可以序列化（接口）
+   2. Externalizable //该接口有方法需要实现  一般实现上面的Serializable接口
+4. 读取反序列化的顺序需要和你保存数据的序列化的顺序一致
+5. 序列化是全有或全无的
+6. 如果将某个变量标记为trasient的，那就代表说在序列化的过程中该变量会被忽略。
+7. 静态变量不会被序列化，因为静态代表每个类一个，而不是每个对象一个。所以当对象被还原的时候，静态变量会维持类中原本的样子，而不是存储是的样子。
+
+
+
+### 对象流介绍
+
+功能：提供了对基本类型或对象类型的序列化和反序列化的方法
+
+1. ObjectOutputStream 提供 序列化功能
+
+2. ObjectInputStream 提供 反序列化功能
+
+
+
+```java
+package com.zmm.OutputStream;
+
+import java.io.*;
+
+/**
+ * @author zmm
+ */
+public class ObjectOutStream_ {
+    public static void main(String[] args) throws IOException, ClassNotFoundException {
+
+        String filePath="e:\\data.dat";
+
+//        ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(filePath));
+//
+//        oos.writeInt(100);
+//        oos.writeBoolean(true);
+//        oos.writeChar('a');
+//        oos.writeDouble(9.5);
+//        oos.writeUTF("郑明敏");
+//
+//        oos.writeObject(new Dog("旺财",10));
+//        oos.close();
+//        System.out.println("数据保存完毕（序列化形式）");
+
+        ObjectInputStream ois = new ObjectInputStream(new FileInputStream(filePath));
+
+        System.out.println(ois.readInt());
+        System.out.println(ois.readBoolean());
+        System.out.println(ois.readChar());
+        System.out.println(ois.readDouble());
+        System.out.println(ois.readUTF());
+        System.out.println(ois.readObject());
+
+
+        ois.close();
+        System.out.println("以反序列化的方式读取（恢复）ok~");
+
+
+    }
+}
+class Dog implements Serializable{
+    String name;
+    int age;
+
+    public Dog(String name, int age) {
+        this.name = name;
+        this.age = age;
+    }
+
+    @Override
+    public String toString() {
+        return "Dog{" +
+                "name='" + name + '\'' +
+                ", age=" + age +
+                '}';
+    }
+}
+```
+
+
+
+## 标准输入和输出流
+
+System.in  标准输入
+
+System.out  标准输出
+
+
+
+## 转换流InputStreamReader 和 OutputStreamWriter
+
+转换流：把字节流转换成字符流
+
+![image-20210831165057771](10-IO流.assets/image-20210831165057771.png)
+
+
+
+
+
+
+
+### 打印流PrintStream 和 PrintWriter
+
+打印流只有输出流，没有输入流
+
+
+
+## Properites类
+
+### 基本介绍：
+
+专门用于读写配置文件的集合类
+
+配置文件的格式：
+
+键=值
+
+键=值
+
+注意：键值对不需要有空格，值不需要用引号括起来。默认类型是String
+
+### Properties的常见方法
+
+![image-20210826140037077](10-IO流.assets/image-20210826140037077.png)
+
+
+
+**使用Properties类完成对mysql.properties的读取**
+
+```java
+package com.zmm.properties_;
+
+import java.io.FileNotFoundException;
+import java.io.FileReader;
+import java.io.IOException;
+import java.util.Properties;
+
+/**
+ * @author zmm
+ */
+public class Properties02 {
+    public static void main(String[] args) throws IOException {
+        Properties properties = new Properties();
+        properties.load(new FileReader("src\\mysql.properties"));
+        properties.list(System.out);
+        String user = properties.getProperty("user");
+        String pwd = properties.getProperty("pwd");
+        System.out.println("用户名=："+user);
+        System.out.println("密码是=："+pwd);
+    }
+}
+```
+
+
+
+**使用Properties类来创建 配置文件，修改配置文件内容**
+
+```java
+package com.zmm.properties_;
+
+import java.io.FileOutputStream;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.util.Properties;
+
+/**
+ * @author zmm
+ */
+public class Properties03 {
+    public static void main(String[] args) throws IOException {
+        Properties properties = new Properties();
+        //如果该文件没有key，就是创建，有就是修改
+        properties.setProperty("charset","utf-8");
+        properties.setProperty("user","汤姆");
+        properties.setProperty("pwd","233");
+
+        //null这个位置就是在配置文件中添加注释，null代表为空。
+        properties.store(new FileWriter("src\\mysql2.properties"),null);
+        
+        System.out.println("文件配置成功~");
+
+    }
+}
+```
+
+
+
+
+
+
+
+课后练习题
+
+![image-20210826151016809](10-IO流.assets/image-20210826151016809.png)
+
+```java
+package com.zmm.homework;
+
+import org.junit.jupiter.api.Test;
+
+import java.io.BufferedWriter;
+import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+
+/**
+ * @author zmm
+ */
+public class Homework01 {
+    public static void main(String[] args) {
+
+    }
+    @Test
+    public void m1(){
+        String directoryPath="e:\\mytemp";
+
+        File file = new File(directoryPath);
+        if(file.exists()){
+            System.out.println("目录存在！");
+        }else{
+            System.out.println("目录不存在,正在创建目录"+directoryPath);
+            file.mkdir();
+        }
+    }
+    @Test
+    public void m2() throws IOException {
+        String filePath="e:\\mytemp\\hello.txt";
+        File file = new File(filePath);
+        if(file.exists()){
+            System.out.println("文件已存在！");
+            BufferedWriter buf = new BufferedWriter(new FileWriter(filePath));
+            buf.write("hello,world");
+            buf.close();
+        }else{
+            file.createNewFile();
+            BufferedWriter buf = new BufferedWriter(new FileWriter(filePath));
+            buf.write("hello,world");
+            buf.close();
+        }
+    }
+}
+```
+
+![image-20210826151028890](10-IO流.assets/image-20210826151028890.png)
+
+```java
+package com.zmm.homework;
+
+import java.io.BufferedReader;
+import java.io.FileReader;
+import java.io.IOException;
+
+/**
+ * @author zmm
+ */
+public class Homework2 {
+    public static void main(String[] args) throws IOException {
+        String filePath="e:\\f2.txt";
+        BufferedReader bufferedReader = new BufferedReader(new FileReader(filePath));
+        String line="";
+        int lineNum=0;
+
+       while((line=bufferedReader.readLine())!=null){
+           System.out.println(++lineNum+" "+line);
+       }
+       bufferedReader.close();
+    }
+}
+```
+
+![image-20210826154447946](10-IO流.assets/image-20210826154447946.png)
+
+```java
+package com.zmm.homework;
+
+import org.junit.jupiter.api.Test;
+
+import java.io.*;
+import java.util.Properties;
+
+/**
+ * @author zmm
+ */
+public class Homework03 {
+    public static void main(String[] args) throws IOException {
+
+        Properties properties = new Properties();
+        properties.load(new FileReader("src\\dog.properties"));
+        String name=properties.getProperty("name");
+        String age=properties.getProperty("age");
+        String color=properties.getProperty("color");
+        int ages=Integer.parseInt(age);
+
+        String filePath="e:\\dog.dat";
+
+        ObjectOutputStream obj = new ObjectOutputStream(new FileOutputStream(filePath));
+        obj.writeObject(new Dog(name,ages,color));
+        obj.close();
+        System.out.println("数据保存完毕（序列化形式）");
+
+    }
+    @Test
+    public void m1() throws IOException, ClassNotFoundException {
+        //反序列化
+        String filePath="e:\\dog.dat";
+        ObjectInputStream ois = new ObjectInputStream(new FileInputStream(filePath));
+
+        System.out.println(ois.readObject());
+        ois.close();
+        System.out.println("以反序列化的方式读取（恢复）ok~");
+    }
+
+}
+class Dog implements Serializable {
+    private String name;
+    private int age;
+    private String color;
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public int getAge() {
+        return age;
+    }
+
+    public void setAge(int age) {
+        this.age = age;
+    }
+
+    public String getColor() {
+        return color;
+    }
+
+    public void setColor(String color) {
+        this.color = color;
+    }
+
+    @Override
+    public String toString() {
+        return "Dog{" +
+                "name='" + name + '\'' +
+                ", age=" + age +
+                ", color='" + color + '\'' +
+                '}';
+    }
+
+    public Dog(String name, int age, String color) {
+        this.name = name;
+        this.age = age;
+        this.color = color;
     }
 }
 ```
