--- a/Java相关学习/JavaSE高级/8-集合.md
+++ b/Java相关学习/JavaSE高级/8-集合.md
@@ -180,6 +180,8 @@ System.out.println(list.indexOf("tom"));//2
 
 
 
+
+
 ## 5.ArrayLIst底层结构
 
 ###5.1 **ArrayList的注意事项：**
@@ -441,4 +443,20 @@ public class MapFor {
 }
 
 ```
+
+
+
+## 12.Collections工具类
+
+Collections是一个操作Set、List和Map等集合的工具类。
+
+Collections中提供了一系列静态的方法对集合元素进行排序、查询和修改等操作。
+
+### 排序操作：（均为static方法）
+
+<img src="8-集合.assets/image-20210826180928457.png" alt="image-20210826180928457" style="zoom:150%;" />
+
+
+
+
 
