--- a/Java相关学习/JavaSE基础/3-数组.md
+++ b/Java相关学习/JavaSE基础/3-数组.md
@@ -59,8 +59,8 @@ for(int i: num){
 ​	①for循环遍历
 
 ```java
-for(int i;i<array.length;i++){
-    for(int j;j<array[i].length;j++){
+for(int i=0;i<array.length;i++){
+    for(int j=0;j<array[i].length;j++){
         array[i][j];
     }
 }
