--- a/Java相关学习/JavaSE基础/2-基本语法.md
+++ b/Java相关学习/JavaSE基础/2-基本语法.md
@@ -122,3 +122,23 @@ public class sss2 {
    1. break：跳出所在的最近的循环
    2. continue:  结束本次循环，继续下一次循环
    3. return：用于跳出所在的方法
+
+
+
+## 6.转义字符
+
+### Java中\r,\n分别是什么以及区别
+
+|      | 描述   |
+| ---- | ------ |
+| \r   | 回车   |
+| \n   | 换行符 |
+
+其中\r，\n，\r\n的区别
+
+\r是回车，将光标移动到当前行的行首
+
+\n是换行，光标移到当前行的下一行，**并且不是行首，是同列**
+
+\r\n是回车换行的意思，就是光标移到当前行的行首
+
