--- a/Java相关学习/JavaSE高级/10-IO流.md
+++ b/Java相关学习/JavaSE高级/10-IO流.md
@@ -8,7 +8,7 @@
 
 文件在程序中是以流的形式来操作
 
-![image-20210823134205641](Untitled.assets/image-20210823134205641.png)
+<img src="Untitled.assets/image-20210823134205641.png" alt="image-20210823134205641" style="zoom:150%;" />
 
 流：数据在数据源（文件）和程序（内存）之间经历的路径
 
@@ -24,7 +24,7 @@
 
 1、首先确定创建文件的方式：
 
-1. 根据路径构建一个File对象
+1. 根据路径构建一个File对象（通过将给定路径名字符串转换为抽象路径名来**创建**一个新 `File` 实例。）
 
    `new File(String pathname)`
 
