--- a/Java相关学习/JavaSE高级/11-网络编程.md
+++ b/Java相关学习/JavaSE高级/11-网络编程.md
@@ -347,9 +347,64 @@ public class SocketTCP01Client {
 package com.zmm.Upload;
 
 import java.io.*;
+import java.net.ServerSocket;
+import java.net.Socket;
+
+/**
+ * @author zmm
+ * 服务端
+ */
+public class TCPFileUploadServer {
+    public static void main(String[] args) throws IOException {
+        //服务端端口8888
+        ServerSocket serverSocket = new ServerSocket(8888);
+        System.out.println("服务端在端口8888处监听，等待连接");
+        Socket socket = serverSocket.accept();
+        System.out.println("接收到客户端");
+
+        //读取客户端写入数据通道的数据(图片)
+        //客户端发送过是字节数组
+        InputStream inputStream = socket.getInputStream();
+        BufferedInputStream bufferedInputStream = new BufferedInputStream(inputStream);
+        ByteArrayOutputStream bos = new ByteArrayOutputStream();//创建输出流对象
+        byte[] b = new byte[1024];
+        int len;
+        while((len=bufferedInputStream.read(b))!=-1){
+            bos.write(b, 0, len);
+        }
+        byte[] array = bos.toByteArray();
+        bos.close();
+
+        String destFilePath = "src\\dog2.jpg";
+        BufferedOutputStream bos1 = new BufferedOutputStream(new FileOutputStream(destFilePath));
+        bos1.write(array);
+        bos1.close();
+
+
+        // 向客户端回复 "收到图片"
+        // 通过 socket 获取到输出流(字符)
+        BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(socket.getOutputStream()));
+        writer.write("收到图片");
+        writer.flush();//把内容刷新到数据通道
+        socket.shutdownOutput();//设置写入结束标记
+
+
+        //关闭其他资源
+        writer.close();
+        bufferedInputStream.close();
+        socket.close();
+        serverSocket.close();
+    }
+}
+
+```
+
+```java
+package com.zmm.Upload;
+
+import java.io.*;
 import java.net.InetAddress;
 import java.net.Socket;
-import java.net.UnknownHostException;
 
 /**
  * @author zmm
@@ -357,35 +412,67 @@ import java.net.UnknownHostException;
  */
 public class TCPFileUploadClient {
     public static void main(String[] args) throws IOException {
+        System.out.println("客户端连接服务端。。。");
         Socket socket = new Socket(InetAddress.getLocalHost(),8888);
-        System.out.println("已经连接上服务端");
+        System.out.println("连接成功");
 
         String filePath="e:\\dog.jpg";
-        //因为图片是二进制文件存储的，所以使用字节处理流bufferedInputStream
+        //因为图片本质是一个二进制文件，所以使用字节输入流比较合适。
+        //得到一个bis是一串字节，将其读取存放到字节数组中去
         BufferedInputStream bis = new BufferedInputStream(new FileInputStream(filePath));
 
+        //得到一个用来存放字节数组的类,立足于字节数组来说
         ByteArrayOutputStream bos = new ByteArrayOutputStream();
         byte[] bytes = new byte[1024];
         int len;
-        while((len=bis.read(bytes))!=-1){
+        while ((len=bis.read(bytes))!=-1){
+            //写入到bos中
             bos.write(bytes,0,len);
         }
-        byte[] array = bos.toByteArray();
+        //将存放字节的对象存放到字节数组中去
+        byte[] array=bos.toByteArray();
+        //关闭该对象，得到存有图片信息的字节数组array
         bos.close();
 
         OutputStream outputStream = socket.getOutputStream();
+        //将其写入到数据通道中,因为是字节文件，所以，参考案例2
         BufferedOutputStream bufferedOutputStream = new BufferedOutputStream(outputStream);
         bufferedOutputStream.write(array);
-        bufferedOutputStream.close();
+
+        //bufferedOutputStream.close(); 放到最后
+        bis.close();
+        //设置写入数据的结束标记
         socket.shutdownOutput();
+
+
+        //=====接收从服务端回复的消息=====
+        InputStream inputStream = socket.getInputStream();
+        BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream));
+        //字符串存在大量操作的的时候使用StringBuffer或者StringBuilder
+        //如果字符串存在大量的修改操作，并在单线程的情况下，使用StringBuilder
+        StringBuilder builder = new StringBuilder();
+        String line;
+        while((line=reader.readLine())!=null){
+            builder.append(line+"\r\n");
+        }
+        String s = builder.toString();
+        System.out.println(s);
+
+        //关闭相关的流
+        bufferedOutputStream.close();
+        inputStream.close();
+        socket.close();
+
 
     }
 }
 ```
 
-
-
 ### netstat指令
 
 ![image-20210831211720706](11-网络编程.assets/image-20210831211720706.png)
+
+### TCP网络通讯的细节
+
+当客户端连接到服务端后，实际上客户端也是通过一个端口和服务端进行通讯的，这个端口是TCP/IP来分配的，是不确定的，是随机的。
 
