--- a/Java相关学习/JavaSE高级/11-网络编程.md
+++ b/Java相关学习/JavaSE高级/11-网络编程.md
@@ -32,11 +32,29 @@
 
 ### 网络通信协议
 
-待补充
+TCP/IP模型
+
+应用层（HTTP）
+
+传输层（TCP）
+
+网络层（IP）
+
+数据链路层
+
+
 
 ### TCP和UDP
 
-待补充
+TCP：传输控制协议
+
+1. 使用TCP协议之前，需建立TCP链接，形成传输数据通道
+2. 传输前，采用三次握手方式，是可靠的
+3. TCP协议进行通信的两个应用进程：客户端、服务端
+4. 在连接中可进行大数据量的传输
+5. 传输完毕，需要释放已建立的连接，效率低。
+
+UDP：用户数据协议
 
 
 
