--- a/Java相关学习/JavaSE高级/10-IO流.md
+++ b/Java相关学习/JavaSE高级/10-IO流.md
@@ -36,7 +36,7 @@
 
    `new File(String parent,String child)`
 
-2、然后createNewFile  创建新文件
+2、然后createNewFile  创建新文件（真正的创建文件）
 
 
 
@@ -47,7 +47,7 @@
 @Test
 public void info() throws IOException {
     File file = new File("e:\\news1.txt");
-    //file.createNewFile();
+    file.createNewFile();
 
     System.out.println("文件名字=" + file.getName());
     System.out.println("文件绝对路径=" +file.getAbsolutePath());
@@ -67,15 +67,79 @@ public void info() throws IOException {
 是不是一个文件=true
 是不是一个目录=false
     
-//目录的操作和文件删除
-//mkdir创建一级目录、mkdirs创建多级目录、delete删除空目录或文件
+
 
 
 ```
 
 
 
-## 流的分类
+### 目录的操作和文件删除
+
+```java
+//目录的操作和文件删除
+//mkdir创建一级目录、mkdirs创建多级目录、delete删除空目录或文件
+import org.junit.Test;
+
+import java.io.File;
+import java.io.IOException;
+
+/**
+ * @author zmm
+ */
+public class Test_ {
+
+    @Test
+    public void testFile() throws IOException {
+        String filePath="e:\\Test.txt";
+        File file = new File(filePath);
+        //如果不执行createNewFile语句的话，文件不存在。
+        System.out.println(file.exists());
+        file.createNewFile();
+        //判断e:\Test.txt是否存在，如果存在就删除
+        if(file.exists()){
+            file.delete();
+            System.out.println("该文件存在，已执行删除操作。");
+        }
+
+    }
+    @Test
+    public void TestDirectory(){
+        //判断E:\\demo02是否存在，存在就删除，否则提示不存在
+        String directoryPath="e:\\demo02";
+        File file = new File(directoryPath);
+        if(file.exists()){
+            file.delete();
+            System.out.println("该目录存在，已执行删除操作。");
+        }else{
+            System.out.println("该目录不存在。");
+        }
+    }
+    @Test
+    public void TestDirectory2(){
+        //判断E:\\demo\\a\\b\\c目录是否存在，如果存在就提示已经存在，否则就创键
+        String directoryPath="E:\\demo\\a\\b\\c";
+        File file = new File(directoryPath);
+        if(file.exists()){
+            System.out.println("该目录已经存在");
+        }else{
+            file.mkdirs();
+            System.out.println("该目录不存在，已创建");
+        }
+    }
+}
+
+```
+
+
+
+## IO流原理及流的分类
+
+### IO流原理
+
+<img src="10-IO流.assets/image-20210906103847636.png" alt="image-20210906103847636" style="zoom:150%;" />
+
+### 流的分类
 
 按操作数据单位不同分为：
 
@@ -96,9 +160,17 @@ public void info() throws IOException {
 
 
 
+### IO流体系图-常用的类
+
+![image-20210906104046264](10-IO流.assets/image-20210906104046264.png)
 
 
-## FileInputStream
+
+
+
+#### FileInputStream
+
+字节输入流 文件（磁盘）--->程序（内存）
 
 ```java
 package com.zmm.inputstream;
@@ -134,6 +206,7 @@ public class FileInputStream_ {
             e.printStackTrace();
         } finally {
             try {
+                //关闭文件流，释放资源
                 fileInputStream.close();
             } catch (IOException e) {
                 e.printStackTrace();
@@ -145,12 +218,15 @@ public class FileInputStream_ {
     @Test
     public void readFile02(){
         String filePath="e:\\hello.txt";
-        byte[] buf=new byte[8];
+        byte[] buf=new byte[8];//开辟一个字节数组当做存储读取数据的缓冲区
         int readLen=0;
         FileInputStream fileInputStream=null;
 
         try {
             fileInputStream=new FileInputStream(filePath);
+            //read(byte[] b)从此输入流中将最多 b.length 个字节的数据读入一个 byte 数组中。
+            //在某些输入可用之前，此方法将阻塞。 b - 存储读取数据的缓冲区。
+            //返回读入缓冲区的字节总数，如果因为已经到达文件末尾而没有更多的数据，则返回 -1。 
             while((readLen=fileInputStream.read(buf))!=-1){
                 System.out.print(new String(buf,0,readLen));
             }
@@ -170,11 +246,11 @@ public class FileInputStream_ {
 
 
 
-## FileOutputStream
+#### FileOutputStream
 
-//1. new FileOutputStream(filePath) 创建方式，当写入内容是，会覆盖原来的内容 
+1. new FileOutputStream(filePath) 创建方式，当写入内容是，会覆盖原来的内容 
 
-//2. new FileOutputStream(filePath, true) 创建方式，当写入内容是，是追加到文件后面
+2. new FileOutputStream(filePath, true) 创建方式，当写入内容是，是追加到文件后面
 
 ```java
 @Test
@@ -203,9 +279,7 @@ public void writeFile(){
 
 
 
-
-
-### 文件的拷贝
+#### 文件的拷贝
 
 ```java
 public class FileCopy {
@@ -246,9 +320,9 @@ public class FileCopy {
 
 
 
-## FileReader和FileWriter
+#### FileReader和FileWriter
 
-### 常用方法
+##### 常用方法
 
 ![image-20210823221125221](Untitled.assets/image-20210823221125221.png)
 
@@ -346,6 +420,8 @@ public class FileWriter_ {
 
 ## 节点流和处理流
 
+#### 基本介绍
+
 ![image-20210823222938079](Untitled.assets/image-20210823222938079.png)
 
 ### 节点流和处理流的区别和联系
@@ -419,7 +495,7 @@ public class BufferedWrite_ {
 
 1. 序列化就是在保存数据时，保存数据的值和数据类型
 2. 反序列化就是在恢复数据时，恢复数据的值和数据类型
-3. 需要让某个对象支持序列化机制，则必须让其类是可序列化。该类必须实现如下两个接口：
+3. **需要让某个对象支持序列化机制，则必须让其类是可序列化**。该类必须实现如下两个接口：
    1. Serializable  //这是一个标记接口，没有任何方法需要实现(推荐使用)
       + 如果某类是可序列化的，则它的子类也自动地可以序列化（接口）
    2. Externalizable //该接口有方法需要实现  一般实现上面的Serializable接口
@@ -459,7 +535,7 @@ public class ObjectOutStream_ {
 //        oos.writeBoolean(true);
 //        oos.writeChar('a');
 //        oos.writeDouble(9.5);
-//        oos.writeUTF("郑明敏");
+//        oos.writeUTF("nb");
 //
 //        oos.writeObject(new Dog("旺财",10));
 //        oos.close();
