--- a/Java相关学习/JavaSE高级/13-反射.md
+++ b/Java相关学习/JavaSE高级/13-反射.md
@@ -133,6 +133,33 @@ String classAllPath = "com.hspedu.Car";
 
 
 
+```java
+//1. Class.forName
+String classAllPath = "com.hspedu.Car"; //通过读取配置文件获取
+Class<?> cls1 = Class.forName(classAllPath);
+System.out.println(cls1);
+
+//2. 类名.class , 应用场景: 用于参数传递
+Class cls2 = Car.class;
+System.out.println(cls2);
+
+//3. 对象.getClass(), 应用场景，有对象实例
+Car car = new Car();
+Class cls3 = car.getClass();
+System.out.println(cls3);
+
+//4. 通过类加载器【4 种】来获取到类的 Class 对象
+//(1)先得到类加载器 car
+ClassLoader classLoader = car.getClass().getClassLoader();
+//(2)通过类加载器得到 Class 对象
+Class cls4 = classLoader.loadClass(classAllPath);
+System.out.println(cls4);
+```
+
+
+
+
+
 ## 拥有Class对象的类型
 
 <img src="13-反射.assets/image-20210904083726722.png" alt="image-20210904083726722" style="zoom:150%;" />
